refactor: simplify PostgresWJdbcIT code and improve type mapping